fixed cursor, aligned icons, created new tab for click on article

--- a/final-front-end/src/Components/Home.scss
+++ b/final-front-end/src/Components/Home.scss
@@ -7,6 +7,7 @@
   display: inline-block;
   margin-top: 80px;
   margin-bottom: 50px;
+  font: helvetica-pro;
 }
 
 .form{
